testcases/compiler2015/Phase2/CompileError/naive10-5100379071-puyouer.c
/*
 * naive
 */
struct A {
    int x, y, z;
};

int main() {
    char t;
    struct A x;
    t = x;
}
